app/src/main/java/com/example/androidmvvm/core/error/DataStoreFailure.kt
package com.example.androidmvvm.core.error

sealed class DataStoreFailure : Failure {

    object IOFailure : DataStoreFailure()
}